# ManuIndex

./: .gitignore  LICENSE  MATHS.md  README.md  manu_index.py  pyproject.toml  requirements.txt  top_rag_results_metrics.json
benchmark/: README.md  _common.py  eval.py  evaluation_cases.json  final_report.json  flat_hybrid_rag_benchmark.py  grag_benchmark.py  grag_report.json  graph_rag_benchmark.py  hierarchical_rag_benchmark.py  naive_rag_benchmark.py  naive_rag_report.json  neural_bridge_report.json  old_report.json  parent_child_rag_benchmark.py  plot.py  plot_grag_comparison.py  plot_per_doc.py  plot_radar.py  query_rewrite_rag_benchmark.py  ragmix_report.json  report.json
benchmark/dataset/: adoplayer-privacy-policy.md  bud-tender-job-description.md  coopercompanies_cash_dividend_press_release.md  evaluation_cases.json  graphic_packaging_holding_company_conflict_minerals_report.md  gt_window_products_privacy_policy.md  inference-acceleration-llms-cpus.md  kilniver_and_kilmelford_community_council_minutes.md  maricopa-institute-bus-schedule.md  marshall-high-school-covid-safety-plan.md  minutes_foundation_meeting_february_16_2012.md  pearl_fleet_booking_terms_and_conditions.md  winston-churchill-biography.md  women-and-corruption-water-sector.md
benchmark/naive_rag/: __init__.py  main.py
benchmark/scripts/: _common.py  grag_benchmark.py  (+5 more)
helpers/: model_download.py  parser.py
manu_index/: __init__.py
notebook_exp/: semantic_chunking.ipynb  test_op.ipynb
tests/: embed.py  manu_index.py  test_manu_index.py  test_reranker.py  test_summary.py
(+36 files in other folders)
